--- a/myblog/blog/templates/blog/base.html
+++ b/myblog/blog/templates/blog/base.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -12,7 +13,10 @@
 </div>
 <div id="sidebar">
     <h2>My blog</h2>
-    <p>This my blog.</p>
+    <p>
+        This my blog.
+        I've written {% total_posts %} posts so far.
+    </p>
 </div>
 </body>
 </html>
